--- a/creations.html
+++ b/creations.html
@@ -18,13 +18,24 @@
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
                 <a href="tarifs.html">Tarifs</a>
-                <a href="contact.html">Contactez-moi</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Les Créations</h1>
+        <h1>Les Gâteaux</h1>
+        <section class="options_gateaux">
+            <h2>Les Différentes Saveurs</h2>
+                <ul>
+                    <li>Gâteau Opéra : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
+                    <li>Gâteau aux fraises et à la crème de rose : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
+                    <li>Gâteau aux épices et à la crème de noix de cajou : un gâteau à base de biscuit aux épices, de crème de noix de cajou et de cranberries séchées</li>
+                    <li>Gâteau aux amandes et à la crème d'amande : un gâteau à base de biscuit aux amandes, de crème d'amande et de pêches pochées</li>
+                    <li>Gâteau aux agrumes et à la crème de pamplemousse : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
+                </ul>
+        </section>
+        <section class="images_creations">
+            <h2>Les Créations</h2>
             <a target="_blank" href="images/Gallerie/image1.jpg">
                 <img src="images/Gallerie/image1.jpg" alt="Photo d'un gâteau rose avec des cerises">
             </a>
@@ -59,6 +70,7 @@
         <a href="home.html" class="lien-icone">
             <img src="images/logo.png" alt="Logo Bakerie"/>
         </a>
+        <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
