--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
                 <a href="tarifs.html">Tarifs</a>
-                <a href="contact.html">Contactez-moi</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -41,6 +41,7 @@
         <a href="home.html" class="lien-icone">
             <img src="images/logo.png" alt="Logo Bakerie" />
         </a>
+        <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
                 <img src="images/instagram.png" alt="Logo Instagram" />
