--- a/tarifs.html
+++ b/tarifs.html
@@ -18,13 +18,50 @@
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
                 <a href="tarifs.html">Tarifs</a>
-                <a href="contact.html">Contactez-moi</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
     <main>
         <section>
             <h1>Les Tarifs</h1>
+            <table>
+                <caption>Nos Tarifs</caption>
+                <thead>
+                    <tr>
+                        <th>Types de Gâteau</th>
+                        <th>Sous 48h</th>
+                        <th>Sous 1 semaine</th>
+                        <th>Sous 15 jours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1 Etage</td>
+                        <td>200 euros</td>
+                        <td>100 euros</td>
+                        <td>50 euros</td>
+                    </tr>
+                    <tr>
+                        <td>2 Etages</td>
+                        <td>300 euros</td>
+                        <td>150 euros</td>
+                        <td>75 euros</td>
+                    </tr>
+                    <tr>
+                        <td>3 Etages</td>
+                        <td>400 euros</td>
+                        <td>200 euros</td>
+                        <td>100 euros</td>
+                    </tr>
+                    <tr>
+                        <td>4 Etages</td>
+                        <td>500 euros</td>
+                        <td>250 euros</td>
+                        <td>125 euros</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <a href="contact.html">Passez Commande</a>
     </main>
@@ -32,6 +69,7 @@
         <a href="home.html" class="lien-icone">
             <img src="images/logo.png" alt="Logo Bakerie"/>
         </a>
+        <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
             <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
