--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,8 @@
         </section>
         <section class="business_info">
             <h2>Où nous trouver</h2>
+            <h3>Adresse: 75 Av. des Champs-Élysées, 75008 Paris</h3>
+            <h3>Téléphone: 01.02.03.04.05</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6587.49619104449!2d2.303600417926818!3d48.87155287340573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc249be485d%3A0x2be3a396c8fd4569!2zTGFkdXLDqWU!5e0!3m2!1sen!2sfr!4v1672449215522!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
