Finished home, about, and creations

--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;1,400&family=Raleway&display=swap" rel="stylesheet">
     <title>Bakerie - Contact</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="home.html" class="lien-icone">
+            <a href="home.html" class="logo">
                 <img src="images/logo.png" alt="Logo Bakerie"/>
             </a>
             <div>
@@ -51,15 +52,15 @@
         </section>
     </main>
     <footer>
-        <a href="home.html" class="lien-icone">
+        <a href="home.html">
             <img src="images/logo.png" alt="Logo Bakerie"/>
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
+            <a target="_blank" href="https://www.instagram.com/">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
-            <a target="_blank" href="https://facebook.com/" class="lien-icone">
+            <a target="_blank" href="https://facebook.com/">
                 <img src="images/facebook.png" alt="Logo Facebook"/>
             </a>
         </div>
