--- a/creations.html
+++ b/creations.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;1,400&family=Raleway&display=swap" rel="stylesheet">
     <title>Bakerie - Les Créations</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="home.html" class="lien-icone">
+            <a href="home.html" class="logo">
                 <img src="images/logo.png" alt="Logo Bakerie"/>
             </a>
             <div>
@@ -22,10 +23,10 @@
             </div>
         </nav>
     </header>
-    <main>
-        <h1>Les Gâteaux</h1>
-        <section class="options_gateaux">
-            <h2>Les Différentes Saveurs</h2>
+    <main class="page-creations">
+        <h1>- Les Créations -</h1>
+        <section class="saveurs">
+            <h2>Les Différentes Saveurs:</h2>
                 <ul>
                     <li>Gâteau Opéra : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
                     <li>Gâteau aux fraises et à la crème de rose : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
@@ -34,48 +35,51 @@
                     <li>Gâteau aux agrumes et à la crème de pamplemousse : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
                 </ul>
         </section>
-        <section class="images_creations">
-            <h2>Les Créations</h2>
-            <a target="_blank" href="images/Gallerie/image1.jpg">
-                <img src="images/Gallerie/image1.jpg" alt="Photo d'un gâteau rose avec des cerises">
-            </a>
-            <a target="_blank" href="images/Gallerie/image2.jpg">
-                <img src="images/Gallerie/image2.jpg" alt="Photo de cupcakes vanille-fraise">
-            </a>
-            <a target="_blank" href="images/Gallerie/image3.jpg">
-                <img src="images/Gallerie/image3.jpg" alt="Photo d'un gâteau à rayures roses et blanches avec des macarons dessus">
-            </a>
-            <a target="_blank" href="images/Gallerie/image4.jpg">
-                <img src="images/Gallerie/image4.jpg" alt="Photo d'un gâteau rose sur fond noir avec des fleurs roses">
-            </a>
-            <a target="_blank" href="images/Gallerie/image5.jpg">
-                <img src="images/Gallerie/image5.jpg" alt="Photo d'un gâteau noir à deux étages avec des details dorés">
-            </a>
-            <a target="_blank" href="images/Gallerie/image6.jpg">
-                <img src="images/Gallerie/image6.jpg" alt="Photo d'un gâteau blanc à trois étages avec des fleurs blanches">
-            </a>
-            <a target="_blank" href="images/Gallerie/image7.jpg">
-                <img src="images/Gallerie/image7.jpg" alt="Photo d'un gâteau blanc avec des fleurs blanches sur fond noir">
-            </a>
-            <a target="_blank" href="images/Gallerie/image8.jpg">
-                <img src="images/Gallerie/image8.jpg" alt="Photo d'une pièce-montée blanche">
-            </a>
-            <a target="_blank" href="images/Gallerie/image9.jpg">
-                <img src="images/Gallerie/image9.jpg" alt="Photo d'un gâteau blanc avec des pétales en glacage roses, blancs, et bleus">
-            </a>
+        <a href="tarifs.html" class="button">Voir les tarifs</a>
+        <section class="gateaux">
+            <h2>- Les Gâteaux -</h2>
+            <div class="creations">
+                <a target="_blank" href="images/Gallerie/image1.jpg">
+                    <img src="images/Gallerie/image1.jpg" alt="Photo d'un gâteau rose avec des cerises">
+                </a>
+                <a target="_blank" href="images/Gallerie/image2.jpg">
+                    <img src="images/Gallerie/image2.jpg" alt="Photo de cupcakes vanille-fraise">
+                </a>
+                <a target="_blank" href="images/Gallerie/image3.jpg">
+                    <img src="images/Gallerie/image3.jpg" alt="Photo d'un gâteau à rayures roses et blanches avec des macarons dessus">
+                </a>
+                <a target="_blank" href="images/Gallerie/image4.jpg">
+                    <img src="images/Gallerie/image4.jpg" alt="Photo d'un gâteau rose sur fond noir avec des fleurs roses">
+                </a>
+                <a target="_blank" href="images/Gallerie/image5.jpg">
+                    <img src="images/Gallerie/image5.jpg" alt="Photo d'un gâteau noir à deux étages avec des details dorés">
+                </a>
+                <a target="_blank" href="images/Gallerie/image6.jpg">
+                    <img src="images/Gallerie/image6.jpg" alt="Photo d'un gâteau blanc à trois étages avec des fleurs blanches">
+                </a>
+                <a target="_blank" href="images/Gallerie/image7.jpg">
+                    <img src="images/Gallerie/image7.jpg" alt="Photo d'un gâteau blanc avec des fleurs blanches sur fond noir">
+                </a>
+                <a target="_blank" href="images/Gallerie/image8.jpg">
+                    <img src="images/Gallerie/image8.jpg" alt="Photo d'une pièce-montée blanche">
+                </a>
+                <a target="_blank" href="images/Gallerie/image9.jpg">
+                    <img src="images/Gallerie/image9.jpg" alt="Photo d'un gâteau blanc avec des pétales en glacage roses, blancs, et bleus">
+                </a>
+            </div>
         </section>
-        <a href="tarifs.html">Voir les tarifs</a>
+        <a href="tarifs.html" class="button">Voir les tarifs</a>
     </main>
     <footer>
-        <a href="home.html" class="lien-icone">
+        <a href="home.html">
             <img src="images/logo.png" alt="Logo Bakerie"/>
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
+            <a target="_blank" href="https://www.instagram.com/">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
-            <a target="_blank" href="https://facebook.com/" class="lien-icone">
+            <a target="_blank" href="https://facebook.com/">
                 <img src="images/facebook.png" alt="Logo Facebook"/>
             </a>
         </div>
