--- a/about.html
+++ b/about.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;1,400&family=Raleway&display=swap" rel="stylesheet">
     <title>Bakerie - La Patissière</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="home.html" class="lien-icone">
+            <a href="home.html" class="logo">
                 <img src="images/logo.png" alt="Logo Bakerie"/>
             </a>
             <div>
@@ -23,28 +24,30 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Marie Dupont</h1>
-            <p>
-                Née à Lyon en 1980, Marie Dupont a toujours été passionnée de pâtisserie. Après avoir obtenu son diplôme de pâtissier-chocolatier, elle a travaillé dans plusieurs grands restaurants avant de décider de s'installer à son compte.
-                En 2010, Marie ouvre sa première pâtisserie, "Gâteaux de Luxe", spécialisée dans les gâteaux de mariage et de fête. Rapidement, sa réputation s'étend bien au-delà de sa ville natale et elle devient l'une des pâtissières les plus célèbres de France.
-                En 2017, Marie est élue meilleure ouvrière de France dans la catégorie pâtisserie. Cet honneur lui permet de participer à de nombreux salons professionnels et de représenter la France lors de compétitions internationales.
-                Aujourd'hui, Marie continue de créer de délicieux gâteaux dans sa pâtisserie, tout en enseignant ses techniques aux futurs pâtissiers. Elle est reconnue comme l'une des meilleures pâtissières de France et ses gâteaux sont appréciés de tous ceux qui ont la chance de les goûter.
-            </p>
-            <img src="images/baker.jpg" alt="Photo d'une femme faisant de la patisserie">
-            <a href="creations.html">Voir mes créations</a> 
+        <section class="bio">
+            <div class="bio-content">
+                <h1>Marie Dupont</h1>
+                <p>
+                    Née à Lyon en 1980, Marie Dupont a toujours été passionnée de pâtisserie. Après avoir obtenu son diplôme de pâtissier-chocolatier, elle a travaillé dans plusieurs grands restaurants avant de décider de s'installer à son compte.
+                    En 2010, Marie ouvre sa première pâtisserie, "Gâteaux de Luxe", spécialisée dans les gâteaux de mariage et de fête. Rapidement, sa réputation s'étend bien au-delà de sa ville natale et elle devient l'une des pâtissières les plus célèbres de France.
+                    En 2017, Marie est élue meilleure ouvrière de France dans la catégorie pâtisserie. Cet honneur lui permet de participer à de nombreux salons professionnels et de représenter la France lors de compétitions internationales.
+                    Aujourd'hui, Marie continue de créer de délicieux gâteaux dans sa pâtisserie, tout en enseignant ses techniques aux futurs pâtissiers. Elle est reconnue comme l'une des meilleures pâtissières de France et ses gâteaux sont appréciés de tous ceux qui ont la chance de les goûter.
+                </p>
+                <a href="creations.html" class="button">Voir mes créations</a> 
+            </div>
+            <img src="images/baker.jpg" alt="Photo d'une femme faisant de la patisserie" id="bio-photo"> 
         </section>
     </main>
     <footer>
-        <a href="home.html" class="lien-icone">
+        <a href="home.html">
             <img src="images/logo.png" alt="Logo Bakerie"/>
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/" class="lien-icone">
+            <a target="_blank" href="https://www.instagram.com/">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
-            <a target="_blank" href="https://facebook.com/" class="lien-icone">
+            <a target="_blank" href="https://facebook.com/">
                 <img src="images/facebook.png" alt="Logo Facebook"/>
             </a>
         </div>
