Changed traifs name page to prices and all links

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <a href="home.html">Accueil</a>
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
-                <a href="tarifs.html">Tarifs</a>
+                <a href="prices.html">Tarifs</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
@@ -27,11 +27,10 @@
         <section class="bio">
             <div class="bio-content">
                 <h1>Marie Dupont</h1>
-                <p>
-                    Née à Lyon en 1980, Marie Dupont a toujours été passionnée de pâtisserie. Après avoir obtenu son diplôme de pâtissier-chocolatier, elle a travaillé dans plusieurs grands restaurants avant de décider de s'installer à son compte.
-                    En 2010, Marie ouvre sa première pâtisserie, "Gâteaux de Luxe", spécialisée dans les gâteaux de mariage et de fête. Rapidement, sa réputation s'étend bien au-delà de sa ville natale et elle devient l'une des pâtissières les plus célèbres de France.
-                    En 2017, Marie est élue meilleure ouvrière de France dans la catégorie pâtisserie. Cet honneur lui permet de participer à de nombreux salons professionnels et de représenter la France lors de compétitions internationales.
-                    Aujourd'hui, Marie continue de créer de délicieux gâteaux dans sa pâtisserie, tout en enseignant ses techniques aux futurs pâtissiers. Elle est reconnue comme l'une des meilleures pâtissières de France et ses gâteaux sont appréciés de tous ceux qui ont la chance de les goûter.
+                <p>Née à Lyon en 1980, Marie Dupont a toujours été passionnée de pâtisserie. Après avoir obtenu son diplôme de pâtissier-chocolatier, elle a travaillé dans plusieurs grands restaurants avant de décider de s'installer à son compte.</p>
+                <p>En 2010, Marie ouvre sa première pâtisserie, "Gâteaux de Luxe", spécialisée dans les gâteaux de mariage et de fête. Rapidement, sa réputation s'étend bien au-delà de sa ville natale et elle devient l'une des pâtissières les plus célèbres de France.</p>
+                <p>En 2017, Marie est élue meilleure ouvrière de France dans la catégorie pâtisserie. Cet honneur lui permet de participer à de nombreux salons professionnels et de représenter la France lors de compétitions internationales.</p>
+                <p>Aujourd'hui, Marie continue de créer de délicieux gâteaux dans sa pâtisserie, tout en enseignant ses techniques aux futurs pâtissiers. Elle est reconnue comme l'une des meilleures pâtissières de France et ses gâteaux sont appréciés de tous ceux qui ont la chance de les goûter.
                 </p>
                 <a href="creations.html" class="button">Voir mes créations</a> 
             </div>
