--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <a href="home.html">Accueil</a>
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
-                <a href="tarifs.html">Tarifs</a>
+                <a href="prices.html">Tarifs</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
