--- a/creations.html
+++ b/creations.html
@@ -18,7 +18,7 @@
                 <a href="home.html">Accueil</a>
                 <a href="about.html">La Patissière</a>
                 <a href="creations.html">Les Créations</a>
-                <a href="tarifs.html">Tarifs</a>
+                <a href="prices.html">Tarifs</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
@@ -35,7 +35,7 @@
                     <li>Gâteau aux agrumes et à la crème de pamplemousse : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
                 </ul>
         </section>
-        <a href="tarifs.html" class="button">Voir les tarifs</a>
+        <a href="prices.html" class="button">Voir les tarifs</a>
         <section class="gateaux">
             <h2>- Les Gâteaux -</h2>
             <div class="creations">
@@ -68,7 +68,7 @@
                 </a>
             </div>
         </section>
-        <a href="tarifs.html" class="button">Voir les tarifs</a>
+        <a href="prices.html" class="button">Voir les tarifs</a>
     </main>
     <footer>
         <a href="home.html">
