Finished prices and thankyou pages

--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,19 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="contact">
         <section class="formulaire">
-            <h1>Dites nous ce qui vous fait envie!</h1>
-            <form method="get" action="thankyou.html">
+            <h1>- Dites nous ce qui vous fait envie -</h1>
+            <form method="get" action="thankyou.html" class="form">
                 <p>
-                    <fieldset>
+                    <fieldset class="info">
                         <legend>Vos Informations</legend>
                         <label for="prenom">Prénom*</label> : <input autofocus required placeholder="Votre prénom" type="text" name="prenom" id="prenom">
                         <label for="nom">Nom*</label> : <input required placeholder="Votre nom" type="text" name="nom" id="nom"><br>
                         <label for="tel">Téléphone*</label> : <input required placeholder="Votre numéro" type="tel" name="tel" id="tel"><br>
                         <label for="email">Adresse Mail*</label> : <input required placeholder="Votre email" type="email" name="email" id="email"><br>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="project">
                         <legend>Votre Projet</legend>
                         <label for="projet">*</label>
                         <textarea required placeholder="Décrivez votre projet en détails ici." name="projet" id="projet"></textarea>
