--- a/thankyou.html
+++ b/thankyou.html
@@ -24,8 +24,10 @@
         </nav>
     </header>
     <main>
-        <p>Merci d'avoir contacté Bakerie! Vous recevrez un mail avec votre devis dans les prochaines 24 heures.</p>
-        <a href="home.html" class="button">Revenir à la page principale</a>
+        <p class="ty">Merci d'avoir contacté Bakerie! Vous recevrez un mail avec votre devis dans les prochaines 24 heures.</p>
+        <div class="order">
+            <a href="home.html" class="button">Revenir à la page principale</a>
+        </div>
     </main>
     <footer>
         <a href="home.html">
