--- a/creations.html
+++ b/creations.html
@@ -35,7 +35,9 @@
                     <li>Gâteau aux agrumes et à la crème de pamplemousse : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
                 </ul>
         </section>
-        <a href="prices.html" class="button">Voir les tarifs</a>
+        <div class="order">
+            <a href="prices.html" class="button">Voir les tarifs</a>
+        </div>
         <section class="gateaux">
             <h2>- Les Gâteaux -</h2>
             <div class="creations">
@@ -68,7 +70,9 @@
                 </a>
             </div>
         </section>
-        <a href="prices.html" class="button">Voir les tarifs</a>
+        <div class="order">
+            <a href="prices.html" class="button">Voir les tarifs</a>
+        </div>
     </main>
     <footer>
         <a href="home.html">
