--- a/creations.html
+++ b/creations.html
@@ -28,11 +28,11 @@
         <section class="saveurs">
             <h2>Les Différentes Saveurs:</h2>
                 <ul>
-                    <li>Gâteau Opéra : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
-                    <li>Gâteau aux fraises et à la crème de rose : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
-                    <li>Gâteau aux épices et à la crème de noix de cajou : un gâteau à base de biscuit aux épices, de crème de noix de cajou et de cranberries séchées</li>
-                    <li>Gâteau aux amandes et à la crème d'amande : un gâteau à base de biscuit aux amandes, de crème d'amande et de pêches pochées</li>
-                    <li>Gâteau aux agrumes et à la crème de pamplemousse : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
+                    <li><span class="underlined">Gâteau Opéra</span> : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
+                    <li><span class="underlined">Gâteau aux fraises et à la crème de rose</span> : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
+                    <li><span class="underlined">Gâteau aux épices et à la crème de noix de cajou</span> : un gâteau à base de biscuit aux épices, de crème de noix de cajou et de cranberries séchées</li>
+                    <li><span class="underlined">Gâteau aux amandes et à la crème d'amande</span> : un gâteau à base de biscuit aux amandes, de crème d'amande et de pêches pochées</li>
+                    <li><span class="underlined">Gâteau aux agrumes et à la crème de pamplemousse</span> : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
                 </ul>
         </section>
         <div class="order">
@@ -41,32 +41,41 @@
         <section class="gateaux">
             <h2>- Les Gâteaux -</h2>
             <div class="creations">
-                <a target="_blank" href="images/Gallerie/image1.jpg">
+                <a target="_blank" href="images/Gallerie/image1.jpg" class="box">
                     <img src="images/Gallerie/image1.jpg" alt="Photo d'un gâteau rose avec des cerises">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image2.jpg">
+                <a target="_blank" href="images/Gallerie/image2.jpg" class="box">
                     <img src="images/Gallerie/image2.jpg" alt="Photo de cupcakes vanille-fraise">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image3.jpg">
+                <a target="_blank" href="images/Gallerie/image3.jpg" class="box">
                     <img src="images/Gallerie/image3.jpg" alt="Photo d'un gâteau à rayures roses et blanches avec des macarons dessus">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image4.jpg">
+                <a target="_blank" href="images/Gallerie/image4.jpg" class="box">
                     <img src="images/Gallerie/image4.jpg" alt="Photo d'un gâteau rose sur fond noir avec des fleurs roses">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image5.jpg">
+                <a target="_blank" href="images/Gallerie/image5.jpg" class="box">
                     <img src="images/Gallerie/image5.jpg" alt="Photo d'un gâteau noir à deux étages avec des details dorés">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image6.jpg">
+                <a target="_blank" href="images/Gallerie/image6.jpg" class="box">
                     <img src="images/Gallerie/image6.jpg" alt="Photo d'un gâteau blanc à trois étages avec des fleurs blanches">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image7.jpg">
+                <a target="_blank" href="images/Gallerie/image7.jpg" class="box">
                     <img src="images/Gallerie/image7.jpg" alt="Photo d'un gâteau blanc avec des fleurs blanches sur fond noir">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image8.jpg">
+                <a target="_blank" href="images/Gallerie/image8.jpg" class="box">
                     <img src="images/Gallerie/image8.jpg" alt="Photo d'une pièce-montée blanche">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
-                <a target="_blank" href="images/Gallerie/image9.jpg">
+                <a target="_blank" href="images/Gallerie/image9.jpg" class="box">
                     <img src="images/Gallerie/image9.jpg" alt="Photo d'un gâteau blanc avec des pétales en glacage roses, blancs, et bleus">
+                    <div class="bigger-picture">Voir La Photo</div>
                 </a>
             </div>
         </section>
@@ -80,7 +89,7 @@
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/">
+            <a target="_blank" href="https://www.instagram.com/"  class="insta">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
             <a target="_blank" href="https://facebook.com/">
