--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/">
+            <a target="_blank" href="https://www.instagram.com/" class="insta">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
             <a target="_blank" href="https://facebook.com/">
