--- a/contact.html
+++ b/contact.html
@@ -23,33 +23,37 @@
             </div>
         </nav>
     </header>
-    <main class="contact">
-        <section class="formulaire">
-            <h1>- Dites nous ce qui vous fait envie -</h1>
-            <form method="get" action="thankyou.html" class="form">
-                <p>
-                    <fieldset class="info">
-                        <legend>Vos Informations</legend>
-                        <label for="prenom">Prénom*</label> : <input autofocus required placeholder="Votre prénom" type="text" name="prenom" id="prenom">
-                        <label for="nom">Nom*</label> : <input required placeholder="Votre nom" type="text" name="nom" id="nom"><br>
-                        <label for="tel">Téléphone*</label> : <input required placeholder="Votre numéro" type="tel" name="tel" id="tel"><br>
-                        <label for="email">Adresse Mail*</label> : <input required placeholder="Votre email" type="email" name="email" id="email"><br>
-                    </fieldset>
-                    <fieldset class="project">
-                        <legend>Votre Projet</legend>
-                        <label for="projet">*</label>
-                        <textarea required placeholder="Décrivez votre projet en détails ici." name="projet" id="projet"></textarea>
-                    </fieldset>
-                    <input type="submit">
-                </p>
-            </form>
-        </section>
-        <section class="business_info">
-            <h2>Où nous trouver</h2>
-            <h3>Adresse: 75 Av. des Champs-Élysées, 75008 Paris</h3>
-            <h3>Téléphone: 01.02.03.04.05</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6587.49619104449!2d2.303600417926818!3d48.87155287340573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc249be485d%3A0x2be3a396c8fd4569!2zTGFkdXLDqWU!5e0!3m2!1sen!2sfr!4v1672449215522!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
+    <main>
+        <div class="formulaire">
+            <h1>- Dites-nous ce qui vous fait envie -</h1>
+        </div>
+        <div class="contact">
+            <section class="form">
+                <h2 class="form-title">Votre Projet</h2>
+                <form method="get" action="thankyou.html" class="form">
+                    <p>
+                        <fieldset class="info">
+                            <legend>Vos Informations</legend>
+                            <label for="prenom">Prénom*</label> : <input autofocus required placeholder="Votre prénom" type="text" name="prenom" id="prenom"><br>
+                            <label for="nom">Nom*</label> : <input required placeholder="Votre nom" type="text" name="nom" id="nom"><br>
+                            <label for="tel">Téléphone*</label> : <input required placeholder="Votre numéro" type="tel" name="tel" id="tel"><br>
+                            <label for="email">Adresse Mail*</label> : <input required placeholder="Votre email" type="email" name="email" id="email"><br>
+                        </fieldset>
+                        <fieldset class="project">
+                            <legend>Votre Projet</legend>
+                            <textarea required placeholder="Décrivez votre projet en détails ici.*" name="projet" id="projet"></textarea>
+                        </fieldset>
+                        <input type="submit" value="Envoyer">
+                    </p>
+                </form>
+            </section>
+            <section class="business_info">
+                <h2>Où nous trouver</h2>
+                <h3><span>Adresse</span>: 75 Av. des Champs-Élysées, 75008 Paris</h3>
+                <h3><span>Téléphone</span>: 01.02.03.04.05</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6587.49619104449!2d2.303600417926818!3d48.87155287340573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc249be485d%3A0x2be3a396c8fd4569!2zTGFkdXLDqWU!5e0!3m2!1sen!2sfr!4v1672449215522!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+        </div>
     </main>
     <footer>
         <a href="home.html">
@@ -57,7 +61,7 @@
         </a>
         <p>Tous droits réservés © Virginie Bellec 2022</p>
         <div>
-            <a target="_blank" href="https://www.instagram.com/">
+            <a target="_blank" href="https://www.instagram.com/" class="insta">
                 <img src="images/instagram.png" alt="Logo Instagram"/>
             </a>
             <a target="_blank" href="https://facebook.com/">
