Edits before video

--- a/creations.html
+++ b/creations.html
@@ -28,11 +28,11 @@
         <section class="saveurs">
             <h2>Les Différentes Saveurs:</h2>
                 <ul>
-                    <li><span class="underlined">Gâteau Opéra</span> : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
-                    <li><span class="underlined">Gâteau aux fraises et à la crème de rose</span> : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
-                    <li><span class="underlined">Gâteau aux épices et à la crème de noix de cajou</span> : un gâteau à base de biscuit aux épices, de crème de noix de cajou et de cranberries séchées</li>
-                    <li><span class="underlined">Gâteau aux amandes et à la crème d'amande</span> : un gâteau à base de biscuit aux amandes, de crème d'amande et de pêches pochées</li>
-                    <li><span class="underlined">Gâteau aux agrumes et à la crème de pamplemousse</span> : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
+                    <li><span>Gâteau Opéra</span> : un gâteau à base de biscuit joconde, de ganache au chocolat et de crème au beurre à la vanille</li>
+                    <li><span>Gâteau aux fraises et à la crème de rose</span> : un gâteau à base de biscuit à la pistache, de crème de rose et de fraises fraîches</li>
+                    <li><span>Gâteau aux épices et à la crème de noix de cajou</span> : un gâteau à base de biscuit aux épices, de crème de noix de cajou et de cranberries séchées</li>
+                    <li><span>Gâteau aux amandes et à la crème d'amande</span> : un gâteau à base de biscuit aux amandes, de crème d'amande et de pêches pochées</li>
+                    <li><span>Gâteau aux agrumes et à la crème de pamplemousse</span> : un gâteau à base de biscuit aux agrumes, de crème de pamplemousse et de zeste d'orange confit.</li>
                 </ul>
         </section>
         <div class="order">
