--- a/thankyou.html
+++ b/thankyou.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="fill">
         <p class="ty">Merci d'avoir contacté Bakerie! Vous recevrez un mail avec votre devis dans les prochaines 24 heures.</p>
         <div class="order">
             <a href="home.html" class="button">Revenir à la page principale</a>
